--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.albiarg.proyecto404"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,6 +32,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c4a17319-f504-4655-a47e-d0b76aa846b0"
+      }
+    },
+    "owner": "albiarg"
   }
 }
